--- a/ui/hb-app/package.json
+++ b/ui/hb-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular-date-value-accessor": "0.0.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
