--- a/ui/hb-app/package.json
+++ b/ui/hb-app/package.json
@@ -21,9 +21,13 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "angular-date-value-accessor": "0.0.2",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.1.3",
+    "bootstrap-datepicker": "^1.8.0",
+    "bootstrap-timepicker": "^0.5.2",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "ng2-datetime": "^1.4.0",
+    "ng2-datetime-picker": "^0.15.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -33,6 +37,7 @@
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.22",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
