--- a/ui/hb-app/package.json
+++ b/ui/hb-app/package.json
@@ -26,6 +26,7 @@
     "bootstrap-timepicker": "^0.5.2",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "ng2-datetime": "^1.4.0",
     "ng2-datetime-picker": "^0.15.1",
     "rxjs": "^5.5.2",
