--- a/ui/hb-app/package.json
+++ b/ui/hb-app/package.json
@@ -12,6 +12,9 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.2.0",
+    "@angular/material": "^5.2.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
@@ -25,6 +28,7 @@
     "bootstrap-datepicker": "^1.8.0",
     "bootstrap-timepicker": "^0.5.2",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "ng2-datetime": "^1.4.0",
@@ -36,6 +40,7 @@
     "@angular/cli": "^1.6.8",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.3.22",
